Fix bar alignment on contact forms.

--- a/src/components/contact-form/contact-form.styles.scss
+++ b/src/components/contact-form/contact-form.styles.scss
@@ -65,6 +65,10 @@
 
 }
 
+.width-50-percent {
+    width: 50%;
+}
+
 .required {
     color: red;
 }
